--- a/.github/workflows/the_test.yaml
+++ b/.github/workflows/the_test.yaml
@@ -9,6 +9,6 @@ on:  # Runs on all push events
 
 jobs:
   call-test-workflow:
-    uses: pylhc/.github/.github/workflows/test_workflow.yml@reusable_workflows
+    uses: pylhc/.github/.github/workflows/echo_test.yml@reusable_workflows
     with:
-      test-input: Hello World
+      test-input: "Hello World / "
